--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
     {name = "Constantin Deumier", email = "ton.email@exemple.com"}
 ]
 dependencies = [
+    "matplotlib>=3.9.4",
     "numpy>=1.20.0",
 ]
 
