--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "biodiffusion"
+name = "biodiffusion_pkg"
 version = "0.1.0"
 description = "Simulation stochastique de diffusion moléculaire en 2D"
 readme = "README.md"
@@ -21,3 +21,7 @@ build-backend = "hatchling.build"
 dev-dependencies = [
     "pytest>=7.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/biodiffusion_pkg"]
+
